--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ canvas {
 				text-align: center;
 			}
 			#T {
-				font-family: "Lucida Console";
+				font-family: "Lucida", "Lucida Grande";
 				color: #FFFFFF;
 				text-shadow: 
 				0.1em 0.1em 0.1em #000,
